--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: stringr
 Type: Package
 Title: Make it easier to work with strings.
-Version: 0.1.10
+Version: 0.2
 Author: Hadley Wickham <h.wickham@gmail.com>
 Maintainer: Hadley Wickham <h.wickham@gmail.com>
 Description: stringr is a set of simple wrappers that make R's string
@@ -13,7 +13,8 @@ Description: stringr is a set of simple wrappers that make R's string
         of other functions.
 Depends: plyr
 License: GPL-2
-Collate: 'basics.r' 'regexp.r' 'match.r'
-Packaged: 2009-11-09 14:43:37 UTC; hadley
+Collate: 'detect.r' 'dup.r' 'extract.r' 'join.r' 'length.r' 'locate.r'
+        'match.r' 'replace.r' 'split.r' 'sub.r'
+Packaged: 2009-11-16 13:34:50 UTC; hadley
 Repository: CRAN
-Date/Publication: 2009-11-09 15:57:09
+Date/Publication: 2009-11-16 19:25:24
