--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: stringr
 Type: Package
 Title: Make it easier to work with strings.
-Version: 0.3
+Version: 0.4
 Author: Hadley Wickham <h.wickham@gmail.com>
 Maintainer: Hadley Wickham <h.wickham@gmail.com>
 Description: stringr is a set of simple wrappers that make R's string
@@ -11,10 +11,11 @@ Description: stringr is a set of simple wrappers that make R's string
         zero length character appropriately, and the output data
         structures from each function matches the input data structures
         of other functions.
-Depends: plyr
+Imports: plyr
 License: GPL-2
-Collate: 'checks.r' 'detect.r' 'dup.r' 'extract.r' 'fixed.r' 'join.r'
-        'length.r' 'locate.r' 'match.r' 'replace.r' 'split.r' 'sub.r'
-Packaged: 2010-02-15 14:21:17 UTC; hadley
+Collate: 'c.r' 'checks.r' 'detect.r' 'dup.r' 'extract.r' 'length.r'
+        'locate.r' 'match.r' 'modifiers.r' 'pad-trim.r' 'replace.r'
+        'split.r' 'sub.r' 'vectorise.r'
+Packaged: 2010-08-24 13:46:08 UTC; hadley
 Repository: CRAN
-Date/Publication: 2010-02-15 17:05:46
+Date/Publication: 2010-08-24 14:33:39
