--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,5 +1,6 @@
 import(plyr)
 export(str_c)
+export(str_count)
 export(str_detect)
 export(str_dup)
 export(str_extract)
@@ -20,3 +21,5 @@ export(str_split_fixed)
 export(str_split)
 export(str_sub)
 export("str_sub<-")
+export(word)
+export(str_wrap)
