--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,18 +7,19 @@ export(str_c)
 export(str_count)
 export(str_detect)
 export(str_dup)
-export(str_extract_all)
 export(str_extract)
+export(str_extract_all)
+export(str_join)
 export(str_length)
-export(str_locate_all)
 export(str_locate)
-export(str_match_all)
+export(str_locate_all)
 export(str_match)
+export(str_match_all)
 export(str_pad)
-export(str_replace_all)
 export(str_replace)
-export(str_split_fixed)
+export(str_replace_all)
 export(str_split)
+export(str_split_fixed)
 export(str_sub)
 export(str_trim)
 export(str_wrap)
