--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,4 @@
 Package: stringr
-Imports: plyr
 Maintainer: Hadley Wickham <h.wickham@gmail.com>
 License: GPL-2
 Title: Make it easier to work with strings.
@@ -12,12 +11,13 @@ Description: stringr is a set of simple wrappers that make R's string
         zero length character appropriately, and the output data
         structures from each function matches the input data structures
         of other functions.
-Version: 0.6.1
+Version: 0.6.2
 Depends: R (>= 2.14)
 Suggests: testthat (>= 0.3)
 Collate: 'c.r' 'checks.r' 'count.r' 'detect.r' 'dup.r' 'extract.r'
         'length.r' 'locate.r' 'match.r' 'modifiers.r' 'pad-trim.r'
         'replace.r' 'split.r' 'sub.r' 'vectorise.r' 'word.r' 'wrap.r'
-Packaged: 2012-07-25 19:41:15 UTC; hadley
+        'utils.r'
+Packaged: 2012-12-05 21:47:03 UTC; hadley
 Repository: CRAN
-Date/Publication: 2012-07-25 19:59:21
+Date/Publication: 2012-12-06 08:39:59
