--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,23 +1,24 @@
 Package: stringr
-Maintainer: Hadley Wickham <h.wickham@gmail.com>
+Version: 1.0.0
+Title: Simple, Consistent Wrappers for Common String Operations
+Description: A consistent, simple and easy to use set of wrappers around the
+    fantastic 'stringi' package. All function and argument names (and positions)
+    are consistent, all functions deal with "NA"'s and zero length vectors
+    in the same way, and the output from one function is easy to feed into
+    the input of another.
+Authors@R: c(
+    person("Hadley", "Wickham", , "hadley@rstudio.com", c("aut", "cre", "cph")),
+    person("RStudio", role = "cph")
+    )
 License: GPL-2
-Title: Make it easier to work with strings.
-Type: Package
-Author: Hadley Wickham <h.wickham@gmail.com>
-Description: stringr is a set of simple wrappers that make R's string
-        functions more consistent, simpler and easier to use.  It does
-        this by ensuring that: function and argument names (and
-        positions) are consistent, all functions deal with NA's and
-        zero length character appropriately, and the output data
-        structures from each function matches the input data structures
-        of other functions.
-Version: 0.6.2
 Depends: R (>= 2.14)
-Suggests: testthat (>= 0.3)
-Collate: 'c.r' 'checks.r' 'count.r' 'detect.r' 'dup.r' 'extract.r'
-        'length.r' 'locate.r' 'match.r' 'modifiers.r' 'pad-trim.r'
-        'replace.r' 'split.r' 'sub.r' 'vectorise.r' 'word.r' 'wrap.r'
-        'utils.r'
-Packaged: 2012-12-05 21:47:03 UTC; hadley
+Imports: stringi (>= 0.4.1), magrittr
+Suggests: testthat, knitr
+VignetteBuilder: knitr
+NeedsCompilation: no
+Packaged: 2015-04-29 12:46:34 UTC; hadley
+Author: Hadley Wickham [aut, cre, cph],
+  RStudio [cph]
+Maintainer: Hadley Wickham <hadley@rstudio.com>
 Repository: CRAN
-Date/Publication: 2012-12-06 08:39:59
+Date/Publication: 2015-04-30 11:48:24
